fix: burger menu backdropfilter on ios

--- a/src/components/@shared/TopNavigation/Menus/MobileMenus/HamburgerMenu/style.module.css
+++ b/src/components/@shared/TopNavigation/Menus/MobileMenus/HamburgerMenu/style.module.css
@@ -1,10 +1,9 @@
 .hamburgerMenu {
-    @apply absolute top-16 rounded right-7 shadow-inner py-2;
+    @apply absolute top-16 rounded right-7 shadow-inner py-2 backdrop-blur-xl;
     width: calc(100% - 56px);
     color: #EEEDED66;
     border: 1px solid white;
     box-shadow: -5px -5px 250px 0 rgba(255, 255, 255, 0.02) inset;
-    backdrop-filter: blur(20px);
 }
 
 .hamburgerMenu p {
